welcome.lessons.welcome.environment.Environment.scala.error
SourceCode:2: error: ';' expected but ',' found.
var tab:Array[Integer] = { 1, 2, 3, 4, 5};
                            ^